# matlog-lab

./: .gitignore  Cargo.toml  Makefile  build.rs
src/: main.rs  proof_check.rs  tree.rs
src/ast/: expression.rs  mod.rs  node_provider.rs  term.rs
src/matcher/: expr_matcher.rs  helpers.rs  mod.rs
src/natural_proof/: base.rs  mod.rs  rebuild.rs
src/parser/: expressions.lalrpop  manager.rs  mod.rs  preprocessor.rs  terms.lalrpop  tests.rs
src/proof_check/: axiom_matchers.rs  check_results.rs  mod.rs  rule_check.rs
test_files/: a.good  a.wrong  b.good  c.good  c.wrong  d.good  d.wrong  e.good  f.good  g.good  h.killing  i.good  sch1.good  sch10.good  sch2.good  sch3.good  sch4.good  sch5.good  sch6.good  sch7.good  sch8.good  sch9.good
