[package]
name = "parsers_try"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = "0.19.6"
mset = "0.0.4"
rustc-hash = "1.1.0"
smallvec = "1.6.1"

[profile.release]
lto = true
